--- a/deno.json
+++ b/deno.json
@@ -4,7 +4,7 @@
 
     "$store/": "./",
     "deco/": "https://denopkg.com/deco-cx/deco@1.52.18/",
-    "apps/": "https://denopkg.com/deco-cx/apps@0.32.26/",
+    "apps/": "https://denopkg.com/vitouwu/deco-cx-apps@29ba46e08b81518bb549350552a6883bf0f4e65a/",
     "$fresh/": "https://deno.land/x/fresh@1.6.3/",
     "preact": "https://esm.sh/preact@10.19.2",
     "preact/": "https://esm.sh/preact@10.19.2/",
@@ -33,19 +33,10 @@
   "githooks": {
     "pre-commit": "check"
   },
-  "exclude": [
-    "node_modules",
-    "static/",
-    "README.md",
-    "_fresh",
-    "**/_fresh/*"
-  ],
+  "exclude": ["node_modules", "static/", "README.md", "_fresh", "**/_fresh/*"],
   "lint": {
     "rules": {
-      "tags": [
-        "fresh",
-        "recommended"
-      ]
+      "tags": ["fresh", "recommended"]
     }
   },
   "nodeModulesDir": true,
