--- a/deno.json
+++ b/deno.json
@@ -1,9 +1,8 @@
 {
   "imports": {
     "deco-sites/linx-impulse/": "./",
-
     "$store/": "./",
-    "deco/": "https://denopkg.com/deco-cx/deco@1.52.18/",
+    "deco/": "https://denopkg.com/deco-cx/deco@1.53.1/",
     "apps/": "https://denopkg.com/vitouwu/deco-cx-apps@dd74f73e02445b749ca87df4a817f6a8968b8fcb/",
     "$fresh/": "https://deno.land/x/fresh@1.6.3/",
     "preact": "https://esm.sh/preact@10.19.2",
@@ -33,10 +32,19 @@
   "githooks": {
     "pre-commit": "check"
   },
-  "exclude": ["node_modules", "static/", "README.md", "_fresh", "**/_fresh/*"],
+  "exclude": [
+    "node_modules",
+    "static/",
+    "README.md",
+    "_fresh",
+    "**/_fresh/*"
+  ],
   "lint": {
     "rules": {
-      "tags": ["fresh", "recommended"]
+      "tags": [
+        "fresh",
+        "recommended"
+      ]
     }
   },
   "nodeModulesDir": true,
